--- a/public/presentations/BelPak-TBMNC-Presentation-v2.html
+++ b/public/presentations/BelPak-TBMNC-Presentation-v2.html
@@ -180,8 +180,8 @@
         .content-grid {
             display: grid;
             grid-template-columns: 1fr 1fr;
-            gap: 60px;
-            height: calc(100% - 140px);
+            gap: 40px;
+            height: auto;
         }
         
         .content-grid.three-col {
@@ -249,10 +249,10 @@
         }
         
         .bullets li {
-            padding: 12px 0;
-            padding-left: 28px;
+            padding: 10px 0;
+            padding-left: 24px;
             position: relative;
-            font-size: 18px;
+            font-size: 16px;
             color: var(--gray-700);
             border-bottom: 1px solid var(--gray-200);
         }
@@ -264,7 +264,7 @@
         .bullets li::before {
             content: "→";
             position: absolute;
-            left: 0;
+            left: 4px;
             color: var(--accent);
             font-weight: bold;
         }
