--- a/public/presentations/BelPak-TBMNC-Presentation-v2.html
+++ b/public/presentations/BelPak-TBMNC-Presentation-v2.html
@@ -250,7 +250,7 @@
         
         .bullets li {
             padding: 10px 0;
-            padding-left: 24px;
+            padding-left: 30px;
             position: relative;
             font-size: 16px;
             color: var(--gray-700);
@@ -264,7 +264,8 @@
         .bullets li::before {
             content: "→";
             position: absolute;
-            left: 4px;
+            left: 0;
+            width: 20px;
             color: var(--accent);
             font-weight: bold;
         }
