Remove inline padding styles that override CSS padding-left for bullet arrows

--- a/public/presentations/BelPak-TBMNC-Presentation-v2.html
+++ b/public/presentations/BelPak-TBMNC-Presentation-v2.html
@@ -1206,12 +1206,12 @@
                     <div class="content-box" style="padding: 20px;">
                         <h3 style="font-size: 16px;"><span class="icon" style="width: 28px; height: 28px; font-size: 14px;">👥</span> SV+ Team</h3>
                         <ul class="bullets" style="font-size: 15px;">
-                            <li style="padding: 6px 0;"><strong>Nelinia Varenas</strong> - CEO</li>
-                            <li style="padding: 6px 0;"><strong>Roy Dickan</strong> - CRO, NC Lead</li>
-                            <li style="padding: 6px 0;"><strong>Dave McFarland</strong> - Quality Expert</li>
-                            <li style="padding: 6px 0;"><strong>Nate Hallums</strong> - ESG Expert</li>
-                            <li style="padding: 6px 0;"><strong>Brian Stitt</strong> - CTO</li>
-                            <li style="padding: 6px 0;"><strong>Icy Williams</strong> - Client Liaison</li>
+                            <li><strong>Nelinia Varenas</strong> - CEO</li>
+                            <li><strong>Roy Dickan</strong> - CRO, NC Lead</li>
+                            <li><strong>Dave McFarland</strong> - Quality Expert</li>
+                            <li><strong>Nate Hallums</strong> - ESG Expert</li>
+                            <li><strong>Brian Stitt</strong> - CTO</li>
+                            <li><strong>Icy Williams</strong> - Client Liaison</li>
                         </ul>
                     </div>
                 </div>
@@ -1219,11 +1219,11 @@
                     <div class="content-box success" style="padding: 20px;">
                         <h3 style="font-size: 16px;"><span class="icon" style="width: 28px; height: 28px; font-size: 14px;">✓</span> Immediate Next Steps</h3>
                         <ul class="bullets check" style="font-size: 15px;">
-                            <li style="padding: 6px 0;"><strong>Schedule</strong> discovery meeting</li>
-                            <li style="padding: 6px 0;"><strong>Clarify</strong> Subaru facility/entity</li>
-                            <li style="padding: 6px 0;"><strong>Validate</strong> MBE certification</li>
-                            <li style="padding: 6px 0;"><strong>Assess</strong> Toyota outsourcing</li>
-                            <li style="padding: 6px 0;"><strong>Engage</strong> hazmat expert</li>
+                            <li><strong>Schedule</strong> discovery meeting</li>
+                            <li><strong>Clarify</strong> Subaru facility/entity</li>
+                            <li><strong>Validate</strong> MBE certification</li>
+                            <li><strong>Assess</strong> Toyota outsourcing</li>
+                            <li><strong>Engage</strong> hazmat expert</li>
                         </ul>
                     </div>
                 </div>
