Change Battery Manufacturing North Carolina text to white

--- a/public/presentations/BelPak-TBMNC-Presentation copy.html
+++ b/public/presentations/BelPak-TBMNC-Presentation copy.html
@@ -1137,7 +1137,7 @@
             <div class="subtitle">Supplier Qualification & Opportunity Assessment</div>
             <div class="toyota-badge">
                 <span class="toyota-logo">TOYOTA</span>
-                <span>Battery Manufacturing North Carolina</span>
+                <span style="color: white;">Battery Manufacturing North Carolina</span>
             </div>
             <div class="meta" style="margin-top: 30px;"><img class="vplus-logo" src="/VPlus_logo.webp" alt="V+" onerror="this.outerHTML='<span class=vplus-text>V<sup>+</sup></span>'"> Prepared by Strategic Value+ Solutions | December 2025</div>
             <div class="slide-footer" style="color: rgba(255,255,255,0.6);">
