--- a/public/presentations/BelPak-TBMNC-Presentation copy.html
+++ b/public/presentations/BelPak-TBMNC-Presentation copy.html
@@ -1876,6 +1876,10 @@
                 </div>
             </div>
             
+            <p style="font-size: 12px; color: var(--gray-500); margin-top: 20px; text-align: center;">
+                *Based on $70M total market potential. Scaling: Y2 = 20% (ramp-up), Y3 = 60% (scaling), Y4 = 100% (full operations). Payback calculated after revenue begins.
+            </p>
+            
             <div class="slide-footer">
                 <div class="logo">
                     <div class="logo-icon">SVP</div>
